--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,44 @@
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-requests==2.24.0
-urllib3==1.25.10
-Werkzeug==1.0.1
+appnope==0.1.3
+asttokens==2.2.1
+async-timeout==4.0.2
+backcall==0.2.0
+base36==0.1.1
+certifi==2022.12.7
+cffi==1.15.1
+chacha20poly1305-reuseable==0.0.4
+charset-normalizer==2.1.1
+coloredlogs==15.0.1
+cryptography==38.0.4
+decorator==5.1.1
+executing==1.2.0
+gunicorn==20.1.0
+h11==0.14.0
+HAP-python==4.6.0
+humanfriendly==10.0
+idna==3.4
+ifaddr==0.2.0
+ipython==8.7.0
+jedi==0.18.2
+matplotlib-inline==0.1.6
+orjson==3.8.3
+paho-mqtt==1.6.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.36
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+pycryptodome==3.16.0
+Pygments==2.13.0
+PyQRCode==1.2.1
+pytz==2022.7
+requests==2.28.1
+six==1.16.0
+stack-data==0.6.2
+traitlets==5.8.0
+tuya-iot-py-sdk==0.6.6
+urllib3==1.26.13
+wcwidth==0.2.5
+websocket-client==1.4.2
+zeroconf==0.44.0
