--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,49 @@
 appnope==0.1.3
-asttokens==2.2.1
-async-timeout==4.0.2
+asttokens==2.4.1
+async-timeout==4.0.3
 backcall==0.2.0
 base36==0.1.1
-certifi==2022.12.7
-cffi==1.15.1
-chacha20poly1305-reuseable==0.0.4
-charset-normalizer==2.1.1
+certifi==2024.2.2
+cffi==1.16.0
+chacha20poly1305-reuseable==0.12.1
+charset-normalizer==3.3.2
+colorama==0.4.6
 coloredlogs==15.0.1
-cryptography==38.0.4
+cryptography==42.0.3
 decorator==5.1.1
-executing==1.2.0
-gunicorn==20.1.0
+exceptiongroup==1.2.0
+executing==2.0.1
+gunicorn==21.2.0
 h11==0.14.0
-HAP-python==4.6.0
+HAP-python==4.9.1
 humanfriendly==10.0
-idna==3.4
+idna==3.6
 ifaddr==0.2.0
-ipython==8.7.0
-jedi==0.18.2
+ipython==8.18.1
+jedi==0.19.1
 matplotlib-inline==0.1.6
-orjson==3.8.3
-paho-mqtt==1.6.1
+orjson==3.9.14
+packaging==23.2
+paho-mqtt==2.0.0
 parso==0.8.3
-pexpect==4.8.0
+pexpect==4.9.0
 pickleshare==0.7.5
-prompt-toolkit==3.0.36
+prompt-toolkit==3.0.43
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
-pycryptodome==3.16.0
-Pygments==2.13.0
+pycryptodome==3.20.0
+Pygments==2.17.2
 PyQRCode==1.2.1
-pytz==2022.7
-requests==2.28.1
+pytz==2024.1
+requests==2.31.0
 six==1.16.0
-stack-data==0.6.2
-traitlets==5.8.0
+stack-data==0.6.3
+tinytuya==1.13.1
+traitlets==5.14.1
 tuya-iot-py-sdk==0.6.6
-urllib3==1.26.13
-wcwidth==0.2.5
-websocket-client==1.4.2
-zeroconf==0.44.0
+typing_extensions==4.9.0
+urllib3==2.2.1
+wcwidth==0.2.13
+websocket-client==1.7.0
+zeroconf==0.131.0
